--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Bad Bank React</title>
     <meta charset="UTF-8" />
-    
-     <!-- The core Firebase JS SDK is always required and must be listed first -->
-     <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
-     <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-auth.js"></script>  
-         
-    <title>Template</title>
-<!-- [START google_config] -->
-  <!-- **********************************************
-       * TODO(DEVELOPER): Use your Client ID below. *
-       ********************************************** -->
-       <meta name="google-signin-client_id" content="YOUR_CLIENT_ID">
-       <meta name="google-signin-cookiepolicy" content="single_host_origin">
-       <meta name="google-signin-scope" content="profile email">
-       <!-- [END google_config] -->
-    <!-- bootstrap css -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
- <!-- Material Design Theming -->
-  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.orange-indigo.min.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
- <!-- Google Sign In -->
- <script src="https://apis.google.com/js/platform.js" async defer></script>
+       <!--bootstrap css-->
+       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
   <link rel="stylesheet" href="main.css">
     <!-- don't use this in production: -->
